--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "ak",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "express-http-proxy": "^2.0.0"
   }
 }
