--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "ak",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-http-proxy": "^2.0.0"
   }
